--- a/res/css/common.css
+++ b/res/css/common.css
@@ -6,7 +6,7 @@ html, body {
 
 body {
   background-image: url('../img/sand.png');
-  background-size: cover;
+  background-size: auto;
   background-position: center;
 }
 
@@ -22,11 +22,6 @@ h1 {
   font-family: FreeleticsTheSans, Arial;
 }
 
-.body-overlay {
-  height: 100vh;
-  width: 100vw;
-}
-
 .links a {
   color: white;
   text-decoration:none;
@@ -39,8 +34,6 @@ h1 {
 
 .blue-gradient-background {
   position: absolute;
-  top: 0;
-  left: 0;
   z-index: -1;
   background-color: #1976d2;
   background:linear-gradient(145deg,#0d47a1,#42a5f5);
